features/media-stack/bazarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bazarr
    security: lscr
    storage: media-stack
  name: bazarr
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
      - image: lscr.io/linuxserver/bazarr:1.5.5@sha256:d40ee61030a9afafddfdd58d160281b865bfcad7cb66e920116fd6fd40668cbb
        name: bazarr
        ports:
        - name: http
          containerPort: 6767
        volumeMounts:
        - name: configdir
          mountPath: /config
        - name: datadir
          mountPath: /data
      volumes:
      - name: configdir
        persistentVolumeClaim:
          claimName: bazarr-config-pvc
