features/media-stack/sonarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sonarr
    storage: media-stack
    security: lscr
  name: sonarr
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - image: lscr.io/linuxserver/sonarr:4.0.16@sha256:6f73bbba33391a338e20d836a60c86beaf2a865a89b706b339fc8cb0b8ce1559
        name: sonarr
        ports:
        - name: http
          containerPort: 8989
        volumeMounts:
        - name: configdir
          mountPath: /config
      volumes:
      - name: configdir
        persistentVolumeClaim:
          claimName: sonarr-config-pvc
