features/media-stack/flaresolverr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flaresolverr
    security: lscr
  name: flaresolverr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaresolverr
  template:
    metadata:
      labels:
        app: flaresolverr
    spec:
      containers:
      - image: ghcr.io/flaresolverr/flaresolverr:v3.4.6@sha256:7962759d99d7e125e108e0f5e7f3cdbcd36161776d058d1d9b7153b92ef1af9e
        name: flaresolverr
        ports:
        - name: http
          containerPort: 8191
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
---
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
spec:
  selector:
    app: flaresolverr
  ports:
  - name: http
    targetPort: http
    port: 80
