features/media-stack/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr-web
spec:
  selector:
    app: bazarr
  ports:
  - name: http
    port: 80
    targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-web
spec:
  selector:
    app: prowlarr
  ports:
  - name: http
    port: 80
    targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: radarr-web
spec:
  selector:
    app: radarr
  ports:
  - name: http
    port: 80
    targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr-web
spec:
  selector:
    app: sonarr
  ports:
  - name: http
    port: 80
    targetPort: http
